@@ -15,6 +15,7 @@
 - Security [CVE-2006-5873]: Rhys Kidd identified a vulnerability in the
   handling of heartbeat packets.  Drop oversize heartbeat packets.
 - Don't send interim records before session start (Daryl Tester).
+- Add "shutdown" and "reload" CLI commands (Daryl Tester).
 
 * Tue Apr 18 2006 Brendan O'Dea <bod@optus.net> 2.1.18
 - Don't shutdown on TerminateReq, wait for CDN.
